# OrderBookMatchingEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: bench.cpp  bench_matching_engine.cpp
include/common/: Types.hpp
include/matching_engine/: Order.hpp  OrderBook.hpp
scripts/: latencies.py  price_movement.py  price_movement.txt
src/: Order.cpp  OrderBook.cpp  main.cpp
src/matching_engine/: Order.cpp  OrderBook.cpp
tests/: TestCases.cpp  TestCases.hpp  TestRunner.hpp  TestUtils.cpp  TestUtils.hpp  test_order_book.cpp
